--- a/markups-biziness/index.html
+++ b/markups-biziness/index.html
@@ -723,7 +723,7 @@
 		</section>
 		<!-- End Clients -->
 
-		<!-- Start Contact -->
+		<!-- Start stock broker -->
 		<section id="mu-contact">
 			<div class="container">
 				<div class="row">
@@ -731,87 +731,57 @@
 						<div class="mu-contact-area">
 
 							<div class="mu-contact-header">
-								<h2 class="mu-heading-title">CONTACT <span>US</span></h2>
+								<h2 class="mu-heading-title">STOCK <span>BROKER</span></h2>
 								<span class="mu-header-dot"></span>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
+								<h4>What is a Stockbroker?</h4>
+								<p>A stockbroker is a professional who executes buy and sell orders for stocks and other securities on behalf of clients. A stockbroker may also be known as a registered representative, investment adviser or simply, broker. Stockbrokers are usually associated with a brokerage firm and handle transactions for retail and institutional customers alike. Stockbrokers often receive commissions for their services, but individual compensation can vary greatly depending on where they are employed. Brokerage firms and broker-dealers are also sometimes referred to as stockbrokers themselves. The most commonly referenced stockbroker firms are discount brokers.</p> 
+								</br>
 							</div>
 
-							<!-- Start Contact Content -->
-							<div class="mu-contact-content">
-								<div class="row">
+							<div class="row">
+								<div class="col-sm-4">
+									<table>
+										<tr><td><li>Zerodha</li></td></tr>
+										<tr><td><li>ICICI Direct</li></td></tr>
+										<tr><td><li>HDFC Securities</li></td></tr>
+										<tr><td><li>Kotak Securities</li></td></tr>
+										<tr><td><li>Sharekhan</li></td></tr>
+										<tr><td><li>Upstox</li></td></tr>
+									</table>
+								</div>
+								<div class="col-sm-4">
+									<table>
+										<tr><td><li>Angel Broking</li></td></tr>
+										<tr><td><li>5paisa</li></td></tr>
+										<tr><td><li>Motilal Oswal</li></td></tr>
+										<tr><td><li>AxisDirect</li></td></tr>
+										<tr><td><li>Karvy</li></td></tr>
+										<tr><td><li>SBI Securities</li></td></tr>
+										<tr><td><li>IIFL</li></td></tr>
 
-									<div class="col-md-8">
-										<div class="mu-contact-left">
-										<div id="form-messages"></div>
-											<form id="ajax-contact" method="post" action="mailer.php" class="mu-contact-form">
-												<div class="form-group">                
-													<input type="text" class="form-control" placeholder="Name" id="name" name="name" required>
-												</div>
-												<div class="form-group">                
-													<input type="email" class="form-control" placeholder="Enter Email" id="email" name="email" required>
-												</div>              
-												<div class="form-group">
-													<textarea class="form-control" placeholder="Message" id="message" name="message" required></textarea>
-												</div>
-												<button type="submit" class="mu-send-msg-btn"><span>SUBMIT</span></button>
-								            </form>
-										</div>
-									</div>	
-
-									<div class="col-md-4">
-										<div class="mu-contact-right">
-											<h4>Biziness</h4>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-											tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-											<address>
-												<p><i class="icon-location-pin"></i>Dooley Branch Rd Millen, GA 30442, USA</p>
-												<p><i class="icon-envelope"></i>contact@domain.com</p>
-												<p><i class="icon-phone"></i>+90 987 678 9834</p>
-											</address>
-											<div class="mu-social-media">
-												<a href="#"><i class="icon-social-facebook"></i></a>
-												<a href="#"><i class="icon-social-twitter"></i></a>
-												<a href="#"><i class="icon-social-google"></i></a>
-												<a href="#"><i class="icon-social-linkedin"></i></a>
-												<a href="#"><i class="icon-social-youtube"></i></a>
-											</div>
-										</div>
-									</div>	
-
+									</table>
+								</div>
+								<div class="col-sm-4">
+									<table>
+										<tr><td><li>Geojit</li></td></tr>
+										<tr><td><li>Edelweiss</li></td></tr>
+										<tr><td><li>Reliance Securities</li></td></tr>
+										<tr><td><li>Religare</li></td></tr>
+										<tr><td><li>SMC Global</li></td></tr>
+										<tr><td><li>Nirmal Bang</li></td></tr>
+										<tr><td><li>Marwadi Shares</li></td></tr>
+									</table>
 								</div>
 							</div>
-							<!-- End Contact Content -->
-
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- End Contact -->
-
-		<!-- Start Google Map -->
-		<section id="mu-google-map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d589888.4396405783!2d-82.41588603632052!3d32.866951223053896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f9f727a4ed30eb%3A0xf2139b0c5c7ae1ec!2sDooley+Branch+Rd%2C+Millen%2C+GA+30442%2C+USA!5e0!3m2!1sen!2sbd!4v1497376364225" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</section>
-		<!-- End Google Map -->
-
+		<!-- End stock broker -->
 	</main>
 	
 	<!-- End main content -->	
-			
-			
-	<!-- Start footer -->
-	<footer id="mu-footer" role="contentinfo">
-			<div class="container">
-				<div class="mu-footer-area">
-					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.</p>
-				</div>
-			</div>
-
-	</footer>
-	<!-- End footer -->
-
-	
 	
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
