--- a/markups-biziness/index.html
+++ b/markups-biziness/index.html
@@ -57,7 +57,7 @@
 		      </button>
 
 		      <!-- Text Logo -->
-		      <a class="navbar-brand" href="#">Biziness</a>
+		      <a class="navbar-brand" href="#">Care Investment Services</a>
 
 		      <!-- Image Logo -->
 		      <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
@@ -70,12 +70,12 @@
 		      	<ul class="nav navbar-nav mu-menu navbar-right">
 			        <li><a href="#">HOME</a></li>
 			        <li><a href="#mu-about">ABOUT US</a></li>
-			        <li><a href="#mu-service">PROGRAMME</a></li>
+			        <li><a href="#mu-service">PROGRAMS</a></li>
 		            <li><a href="#mu-portfolio">GALLERY</a></li>
 		            <li><a href="#mu-team">KNOWLEDGE CENTRE</a></li>
 		            <li><a href="#mu-clients">NISM</a></li>
-		            <li><a href="#mu-contact">EXCHANGE</a></li>
-	            	<li><a href="#mu-contact">STOCK BROKER</a></li>	
+		            <li><a href="#mu-exchange">EXCHANGE</a></li>
+	            	<li><a href="#mu-stock-broker">STOCK BROKER</a></li>	
 		      	</ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -95,7 +95,7 @@
 					<div class="mu-featured-slider-single">
 						<img src="assets/images/slider-img-1.jpg">
 						<div class="mu-featured-slider-content">
-							<h1>WELCOME TO BIZINESS</h1>
+							<h1>WELCOME TO Care Investment Services</h1>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
 							<a href="#" class="mu-primary-btn">CONTACT US</a>
 						</div>
@@ -723,19 +723,66 @@
 		</section>
 		<!-- End Clients -->
 
-		<!-- Start stock broker -->
-		<section id="mu-contact">
+		<!-- Start exchange -->
+		<section id="mu-exchange">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="mu-contact-area">
+						<div class="mu-stock-broker-area">
 
-							<div class="mu-contact-header">
+							<div class="mu-stock-broker-header">
+								<h2 class="mu-heading-title">EXCH<span>ANGE</span></h2>
+								<span class="mu-header-dot"></span>
+									<div>
+										<table style="text-align: left;">
+										<tr>
+											<th style="border:1px solid black"><p>Name of the Recognized Stock Exchange</p></th>
+											<th style="border:1px solid black"><p>Address</p></th>
+										</tr>
+										<tr>
+											<td style="border:1px solid black"><p>BSE Ltd.</p></td>
+											<td style="border:1px solid black"><p>P J Tower, Dalal Street, Mumbai 400023 <br> <b>Website</b> : <a href="http://www.bseindia.com"/>http://www.bseindia.com </p></td>
+										</tr>
+										<tr>
+											<td style="border:1px solid black"><p>Multi Commodity Exchange of India Ltd.</p></td>
+											<td style="border:1px solid black"><p>Exchange Square, CST No.225, Suren Road, Andheri (E), Mumbai 400093 <br> <b>Website</b> : <a href="https://www.mcxindia.com"/>https://www.mcxindia.com </p></td>
+										</tr>
+										<tr>
+											<td style="border:1px solid black"><p>National Commodity & Derivatives Exchange Ltd.</p></td>
+											<td style="border:1px solid black"><p>Akruti Corporate Park,1st Floor, Near G.E.Garden, L.B.S. Marg, Kanjurmarg (West), Mumbai 400078 <br> <b>Website</b> : <a href="http://www.ncdex.com/"/>http://www.ncdex.com/ </p> </td>
+										</tr>
+										<tr>
+											<td style="border:1px solid black"><p>National Stock Exchange of India Ltd.</p></td>
+											<td style="border:1px solid black"><p>Exchange Plaza, C-1, Block G, Bandra Kurla Complex, Bandra (East) Mumbai 400051 <br> <b>Website</b> : <a href="https://www.nseindia.com"/>https://www.nseindia.com </p></td>
+										</tr>
+									</div>
+								</table>
+								</div>
+								
+								<br>
+							</div>
+
+							
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- end exchange -->
+
+		<!-- Start stock broker -->
+		<section id="mu-stock-broker">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="mu-stock-broker-area">
+
+							<div class="mu-stock-broker-header">
 								<h2 class="mu-heading-title">STOCK <span>BROKER</span></h2>
 								<span class="mu-header-dot"></span>
 								<h4>What is a Stockbroker?</h4>
 								<p>A stockbroker is a professional who executes buy and sell orders for stocks and other securities on behalf of clients. A stockbroker may also be known as a registered representative, investment adviser or simply, broker. Stockbrokers are usually associated with a brokerage firm and handle transactions for retail and institutional customers alike. Stockbrokers often receive commissions for their services, but individual compensation can vary greatly depending on where they are employed. Brokerage firms and broker-dealers are also sometimes referred to as stockbrokers themselves. The most commonly referenced stockbroker firms are discount brokers.</p> 
-								</br>
+								<br>
 							</div>
 
 							<div class="row">
