--- a/markups-biziness/index.html
+++ b/markups-biziness/index.html
@@ -73,7 +73,7 @@
 			        <li><a href="#mu-service">PROGRAMS</a></li>
 		            <li><a href="#mu-portfolio">GALLERY</a></li>
 		            <li><a href="#mu-team">KNOWLEDGE CENTRE</a></li>
-		            <li><a href="#mu-clients">NISM</a></li>
+		            <li><a href="#mu-nism">NISM</a></li>
 		            <li><a href="#mu-exchange">EXCHANGE</a></li>
 	            	<li><a href="#mu-stock-broker">STOCK BROKER</a></li>	
 		      	</ul>
@@ -648,73 +648,98 @@
 
 		
 		<!-- Start Clients -->
-		<section id="mu-clients">
+		<section id="mu-nism">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="mu-clients-area">
+						<div class="mu-nism-area">
 
-							<div class="mu-clients-header">
-								<h2 class="mu-heading-title">OUR <span>CLIENTS</span></h2>
+							<div class="mu-nism-header">
+								<h2 class="mu-heading-title">NI<span>SM</span></h2>
 								<span class="mu-header-dot"></span>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
+								<p>National Institute of Securities Market (NISM) is an online testing and certification program which has been established by SEBI - the most powerful regulator of Indian Capital Markets. Since NISM has been promoted by SEBI itself, the NISM Exams and Certifications have become one of the most important certifications in the Indian Financial and Capital Market Sector.<br>
+								Currently there are over 20 <b>NISM certification</b> exams which have been prepared with a view of testing the practical knowledge and skills required to operate in the Indian Financial Markets. This is to ensure that the persons entering this field are of high caliber and are upto the challenges of the mature, vibrant and demanding markets.</p>
+								<p style="text-align: left"><b>NISM Certifications</b></p>
 							</div>
 
-							<!-- Start Clients Content -->
-							<div class="mu-clients-content">
+							<!-- Start NISM Content -->
+							<div class="mu-nism-content">
 								<div class="row">
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-1.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-2.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-3.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-5.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-4.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
-
-									<!-- Client Single Content -->
-									<div class="col-sm-6 col-md-2">
-										<div class="mu-clients-content-single">
-											<img src="assets/images/client-logo-6.png" alt="brand image">
-										</div>
-									</div>
-									<!-- / Client Single Content -->
+									<table>
+										<tr>
+											<th>NISM Series</th>
+											<th></th>
+										</tr>
+										<tr>
+											<td>I</td>
+											<td>Currency Derivatives Certification Examination</td>
+										</tr>
+										<tr>
+											<td>II</td>
+											<td>A: Registrars and Transfer Agents (Corporate) Certification Examination<br>
+												B: Registrars and Transfer Agents (Mutual Fund) Certification Examination
+											</td>
+										</tr>
+										<tr>
+											<td>III</td>
+											<td>A: Securities Intermediaries Compliance (Non-Fund) Certification Examination<br>
+												B: Issuers Compliance Certification Examination
+											</td>
+										</tr>
+										<tr>
+											<td>IV</td>
+											<td>Interest Rates Derivatives Certification Examination</td>
+										</tr>
+										<tr>
+											<td>V</td>
+											<td>A: Mutual Fund Distributors Certification Examination<br>
+												B: Mutual Fund Foundation Certification Examination<br>
+												C: Mutual Fund Distributors (Level 2) Certification Examination
+											</td>
+										</tr>
+										<tr>
+											<td>VI</td>
+											<td>Depository Operations Certification Examination</td>
+										</tr>
+										<tr>
+											<td>VII</td>
+											<td>Securities Operations and Risk Management Certification Examination</td>
+										</tr>
+										<tr>
+											<td>VIII</td>
+											<td>Equity Derivatives Certification Examination</td>
+										</tr>
+										<tr>
+											<td>IX</td>
+											<td>Merchant Banking Certification Examination</td>
+										</tr>
+										<tr>
+											<td>X</td>
+											<td>A: Investment Adviser (Level 1) Certification Examination<br>
+												B: Investment Adviser (Level 2) Certification Examination
+											</td>
+										</tr>
+										<tr>
+											<td>XI</td>
+											<td>Equity Sales Certification Examination</td>
+										</tr>
+										<tr>
+											<td>XII</td>
+											<td>Securities Markets Foundation Certification Examination</td>
+										</tr>
+										<tr>
+											<td>XIII</td>
+											<td>Common Derivatives Certification Examination</td>
+										</tr>
+										<tr>
+											<td>XIV</td>
+											<td>Internal Auditors for Stock Brokers Certification Examination</td>
+										</tr>
+									</table>
 
 								</div>
 							</div>
-							<!-- End Clients Content -->
+							<!-- End NISM Content -->
 
 						</div>
 					</div>
