knowledge centre half done

--- a/markups-biziness/index.html
+++ b/markups-biziness/index.html
@@ -602,8 +602,42 @@
 									<h6>Multiple Media:</h6>
 									<p>Placing orders through the online account is beneficial in streamlining the entire process. The different ways of accessing the account allow an investor to trade during market hours as well after-market hours, if the need so arises.</p>
 
+									<h6>HOW TO TRADE ONLINE USING TRADING ACCOUNT</h6>
+									<p>Share trading was once the sole domain of stockbrokers. It was only them who performed trades on their client's behalf. Fortunately, online platforms are now easily available to investors. Using internet and technology, investors may now track movements of tradable assets or securities in real time. Online trading also provides a wealth of information which may be used to take more informed decisions for profitable trading.</p>
 
+									<h6>Here are a few simple steps to get started with your Online Trading Account:</h6>
+									<ul>
+										<li>Choose an Online Trading Account</li>
+										<li>Educate Yourself on using the the platform</li>
+										<li>Practice with an Online Stock Simulator</li>
+										<li>Choose the Low-Risk High-Reward Trading Method</li>
+										<li>Make a Plan</li>
+										<li>Keep Excellent Records</li>
+										<li>Make Long-term Investments</li>
+										<li>Diversify Your Stockholding</li>
+									</ul>
 
+									<h6>Choosing an Online Trading Account</h6>
+									<p>To begin trading online, an investor needs to register for a trading account and a Demat account which is required to be linked to his bank account for online money transfer. Know more about how to open Demat account and a trading account.
+									Before you open both the accounts, it is essential to check the credibility and the credentials of the broking firm. Moreover, the trading account should allow you to make online investments in mutual funds, equity shares and IPOs, and lastly Futures and Options. Lastly, it should have secure interface and protocols such that all your transactions carried are safe and secure all the time.</p>
+
+									<h6>Educate Yourself</h6>
+									<p>It is important that you know trading terms like buy, sell, IPO, portfolio, quotes, spread, volume, yield, index, sector, volatility etc. before you place your first order in the stock market. Read financial websites or join investment courses to gain better understanding of the stock market jargon and related news.</p>
+
+									<h6>Practice with an Online Stock Simulator</h6>
+									<p>Using an online stock simulator is a good idea to practice your skills at zero risk. By playing Virtual stock market games, you could increase your knowledge on investing strategies. Most of the online virtual stock market games are synchronized with market indices and stock values, thus giving you a real experience of trading in stocks using virtual money. This helps in understanding the working of the stock market, without having to lose on stocks.</p>
+
+									<h6>Chose the Low-Risk High-Reward Trading Method</h6>
+									<p>There are always ups and downs in the stock market. Beginners often do more damage to their share trading account by expecting higher return
+
+									<h6>Make a Plan</h6>
+									<p>As the old adage goes, fail to plan and you plan to fail. Those who are serious about being successful, including traders, need to have an investment or trading strategy in place. It is of utmost importance to make right investment decisions through your trading strategies. Decide the amount you want to invest and the time limit till for which you want to hold the investments. Accordingly, you can schedule your orders to buy and sell, depending on the cash limits and exposure set by you, as per the planned strategy.</p>
+
+									<h6>Keep Excellent Records</h6>
+									<p>Make records of targets, entry and exit of trade, market opening and closing value; and record the lessons learnt during a particular trading day. Recording helps avoid unnecessary mistakes made in the past and improve current trading strategy. By keeping a track of trades, it becomes easy to plan the next move, thus enabling you to make a profitable trade.</p>
+
+									<h6>Make Long-term Investments</h6>
+									<p>Remember that investments need time to bear fruit and the risk of investment reduces over a period of time.</p>
 								</div>
 							</div>
 							
