--- a/markups-biziness/index.html
+++ b/markups-biziness/index.html
@@ -93,6 +93,7 @@
 
 					<!-- Start Single slide -->
 					<div class="mu-featured-slider-single">
+						<img src="assets/images/slider-img-1.jpg">
 						<div class="mu-featured-slider-content">
 							<h1>WELCOME TO Care Investment Services</h1>
 						</div>
