--- a/markups-biziness/index.html
+++ b/markups-biziness/index.html
@@ -559,7 +559,7 @@
         <!-- End knowledge centre -->
 
         <!-- Start Testimonials -->
-        <section id="mu-testimonials">
+        <section id="mu-testimonials" style="background-color: #7d7373">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
